--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -12,9 +12,7 @@ body {
     max-width: 775px;
     margin-left: auto;
     margin-right: auto;
-    background: rgb(176,176,176);
-
-
+    background-color: #999999;
 }
 
 .message{
