--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -22,28 +22,73 @@ body {
     
 }
 
+#header_container {
+    margin: 0px auto 0px auto;
+    width: 1024px;
+}
+
 #logo {
     float: left;
     width: 250px;
     height: 60px;
     line-height: 60px;
     vertical-align: middle;
+    padding-top: 5px;
 }
 
 #menu {
     float: right;
-    width: 250px;
+    width: 450px;
     height: 60px;
     line-height: 60px;
     vertical-align: middle;
+    font-family: Lucida Sans Unicode, Lucida Grande, sans-serif;
+}
+
+#menu li {
+    display: inline;
+    margin-left: 10px;
+}
+
+#menu a {
+    text-decoration: none;
+    color: #cccccc;
+}
+
+#menu li > a:hover, a:active, input:hover, a:focus, input:active, input:focus {
+    color: black;
+    border-bottom: solid 1px #cc0000;
+    border-radius: 5px;
 }
 
 #content {
-    width: 100%;
+    margin: 0px auto 0px auto;
+    width: 1024px;
     min-height: 300px;
+    padding: 100px 10px 100px 10px;
+    text-align: center;
+}
+
+#content_description {
+    color: #999999;
+    margin-bottom: 25px;
+}
+
+#h1_underline {
+    height: 1px;
+    width: 400px;
+    background: url('#{resource['img/h1_underline.jpg']}') no-repeat;
+    text-align: center;
+    margin: 0 auto 25px auto;
 }
 
 #footer {
     width: 100%;
     height: 60px;
+}
+
+h1 {
+   text-align: center;
+   margin-bottom: 25px;
+   color: #666666;
 }
